--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ required-features = ["cli"]
 
 [features]
 default = []
-cli = ["dep:clap"] 
+cli = ["dep:clap", "dep:yansi"]  # 在 cli feature 中添加 yansi
 
 [dependencies]
 cxx = "1.0"
 clap = { version = "4.0", optional = true, features = ["derive"] } 
+yansi = { version = "1.0", optional = true }  
 anyhow = "1.0"
 
 [build-dependencies]
